# flowers

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  flower_model_weights.pth  pyproject.toml
.github/workflows/: ci.yml
src/flowers/: __init__.py  api.py  main.py  models.py  train.py  utils.py
tests/: test_api.py
